# DeformationLoopClosure

./: CMakeLists.txt  README.md
CMakeModules/: FindBullet.cmake  FindCollada.cmake  FindDTAM.cmake  FindFastRec.cmake  FindIcarus.cmake  FindIcarus.cmake~  FindJSONCpp.cmake  FindNazca.cmake  FindOpenCV2.cmake  FindOpenNI2.cmake  FindOpenNI2.cmake~  FindPTAM.cmake  FindThrust.cmake  Find_SSE.cmake  Findfreenect.cmake  Findfreenectsync.cmake  Findosg.cmake  Findosg.cmake~
data/: SE3poses.txt  variables.cfg
src/: main_deformable_lc.cpp  main_iclnuim_drift_recon.cpp
